# greenlib

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog  FindLua.cmake  FindSystemC.cmake  FindTLM.cmake  README.md  README.txt
greencontrol/: test_examples
greenmessage/: CMakeLists.txt  README
greenreg/: CMakeLists.txt  Makefile  Makefile.config  code_documentation.h  gr_externs.cpp  gr_externs.h  (+3 more)
greenreg/examples/reg_container/: CMakeLists.txt  Makefile  expected_output.txt  sc_main.cpp
greenreg/lib/: CMakeLists.txt
greenscript/: CMakeLists.txt  LICENSE  Makefile  Makefile.defs  README  cli_ipython.py  cli_native.py  greenscript.cpp  gs.py  gs_sa.py  gsp_sc.cpp  gsp_sc.i  gsp_sc_sa.i  winpdb_gs.py
greenscript/docs/manual/: GreenScriptManual.tex  Makefile
greenscript/examples/: CMakeLists.txt  test_event_tree.py  test_gav_output.py  test_gs_event.py  test_gs_fifo.py  test_gs_fork.py  test_gs_param.cfg.lua  test_gs_param.py  test_gs_signal.py  test_module_hierarchy.py  test_thread_interrupt.py  test_thread_pause.py
greenscript/examples/dbgr_test/: CMakeLists.txt  Makefile  expected_output.txt  simple.py  system.cpp
greenscript/examples/embedded-adder/: CMakeLists.txt  Makefile  adder.py  disp.h  expected_output.txt  gen.h  system.cpp
greenscript/examples/embedded-adder-fifo/: CMakeLists.txt  Makefile  adder.py  config.lua  disp.h  expected_output.txt  gen.h  system.cpp
greenscript/examples/embedded-greenmessage/: CMakeLists.txt  Makefile  bidir.h  bidir.py  system.cpp
greenscript/examples/embedded-multi-inst/: CMakeLists.txt  adder.py  config.lua  disp.h  gen.h  subtractor.py  system.cpp
greenscript/examples/embedded-params/: CMakeLists.txt  Makefile  emb.txt  embedded_params.py  sys.txt  system.cpp
greenscript/examples/embedded-testbench/: CMakeLists.txt  Makefile  adder.h  expected_output.txt  system.cpp  testbench.py
greenscript/examples/greenmessage/: CMakeLists.txt  receiver.py  run  sender.py  system.py
greenscript/examples/greenmessage-configset/: CMakeLists.txt  Makefile  expected_output.txt  receiver.py  sender.py  system.py
greenscript/examples/writeif/: CMakeLists.txt  Makefile  bidir.h  bidir.py  expected_output.txt  system.cpp
greenscript/include/greenscript/: greenscript.h  gs_sc_api_detection.h  gsp_sc.h  gsp_sc_helper.h
greenscript/lib/: CMakeLists.txt
greenscript/src/: greenscript.cpp  gsp_sc.cpp  gsp_sc.i
greensignalsocket/: CMakeLists.txt
greensignalsocket/docs/: signal_socket.odt
greensignalsocket/examples/corner_cases/: CMakeLists.txt  example.cpp  example.h  expected_output_0  expected_output_1  expected_output_2  expected_output_3  test.cmake
greensignalsocket/examples/invalidate_ext/: CMakeLists.txt  Makefile  example.h  expected_output.txt
greensignalsocket/examples/multi_example/: CMakeLists.txt  expected_output.txt  multi_example.h
greensignalsocket/examples/simple/: CMakeLists.txt  example.h  expected_output.txt  expected_output_2.1.0-2.3.0.txt  test.cmake
greensignalsocket/include/greensignalsocket/: green_signal.h
greensignalsocket/include/greensignalsocket/green_signal_h/: gs_generic_signal_ifs.h  gs_generic_signal_p.h
greensignalsocket/include/greensignalsocket/green_signal_h/green_signal_socket/generic/: wrapper_base.h
greensignalsocket/include/greensignalsocket/green_signal_h/green_signal_socket/initiator/: initiator_signal_multi_socket.h  initiator_signal_socket.h  initiator_signal_socket_wrapper.h
greensocket/examples/simple_b_transport_multi/: CMakeLists.txt  Makefile  expected_output.template  expected_output.txt  simple_b_gs_master_multi.cpp  simple_b_gs_master_multi.h  simple_b_transport_top.cpp  test.cmake
greensocket/examples/simple_quantum_keeper/: CMakeLists.txt  ExplicitLTTarget_gs_quantumkeeper.h  Makefile  README  b_master_qk.cpp  b_master_qk.h  expected_output.txt  top.cpp
greenthreads/examples/async-wait/: CMakeLists.txt  main.cpp  node.h
gsgpsocket/: CMakeLists.txt
gsgpsocket/examples/: Makefile.defs  Makefile.gspm
gsgpsocket/examples/bidir_nb_example/: BidirModule.h  CMakeLists.txt  SlaveMemBidir.h  expected_output.txt  testbench_bidir_nb.cpp
gsgpsocket/examples/bidir_nb_example_hier/: BidirModule.h  CMakeLists.txt  Makefile  SlaveMemBidir.h  expected_output.txt  testbench_bidir_nb.cpp
gsgpsocket/examples/f_example/: CMakeLists.txt  Makefile  Master.h  Slave.h  example.cpp  expected_output.txt
gsgpsocket/examples/f_example_hier/: CMakeLists.txt  Master.h  Slave.h  example.cpp  expected_output.txt
gsgpsocket/examples/generic_port_read_write/: CMakeLists.txt  Makefile  Master.h  Slave.h  example.cpp  expected_output.txt
gsgpsocket/examples/nb_example/: CMakeLists.txt  Master.h  Slave.h  example.cpp  expected_output.txt  expected_output_w_cc_and_wr_resp.txt  gs_dump.h
gsgpsocket/examples/osci_slave_gp_master_example/: CMakeLists.txt  Makefile  expected_output.txt  testbench_example.cpp
gsgpsocket/examples/simple/: CMakeLists.txt  Makefile  example_simple.cpp  expected_output.txt  sillysort.h  simplememory.h
gsgpsocket/examples/simplebus/: CMakeLists.txt  Makefile  example_simplebus.cpp  expected_output.txt
gsgpsocket/examples/test_devices/: CMakeLists.txt  Makefile  TestMaster.h  TestSlave.h  example.cpp  expected_output.txt  test.cmake
gsgpsocket/include/gsgpsocket/apis/: GenericMasterPortReadWrite.h  GenericSlavePortReadWrite.h  simplebusAPI.h
gsgpsocket/include/gsgpsocket/core/: attributeBase.h  attributes.h  tlm_b_if.h  tlm_f_if.h
gsgpsocket/include/gsgpsocket/extensions/: priority_extension.h
gsgpsocket/include/gsgpsocket/transport/: GSGPBidirectionalSocket.h  GSGPBidirectionalSocket.tpp  GSGPBlockingSocket.h  GSGPMasterBlockingSocket.h  GSGPMasterBlockingSocket.tpp  GSGPMasterSocket.h  GSGPMasterSocket.tpp  GSGPSlaveBlockingSocket.h  GSGPSlaveBlockingSocket.tpp  GSGPSlaveSocket.h  GSGPSlaveSocket.tpp  GSGPSocket.h  GSGPconfig.h  generic_phase.h  generic_transaction.h
gsgpsocket/include/gsgpsocket/utils/: gs_datatypes.h  gs_trace.h  gsgp_peq.h  helpfunctions.h  payload_event_queue.h  pseudo_port.h  unevenpair.h
(+687 files in other folders)
