ADD_LIBRARY( greenreg STATIC
    ../src/greenreg.cpp
    ../src/greenreg_socket/greenreg_socket.cpp
    ../src/framework/core/I_gr_dump.cpp
    ../src/framework/core/I_gr_config.cpp
    ../src/framework/core/gr_object.cpp
    ../src/framework/core/gr_dumper.cpp
    ../src/framework/core/gr_common.cpp
    ../src/framework/core/gr_module.cpp
    ../src/framework/devices/gr_device_container.cpp
    ../src/framework/registers/gr_register_container.cpp
    ../src/framework/registers/gr_register_splitio.cpp
    ../src/framework/registers/gr_register_sharedio.cpp
    ../src/framework/registers/gr_register_container_reference_container.cpp
    ../src/utils/stl_ext/file_stream_tokenizer.cpp
    ../src/utils/stl_ext/base_types.cpp
    ../src/utils/stl_ext/commandline_args.cpp
    ../src/utils/stl_ext/string_utils.cpp
    ../src/utils/storage/dynamic_classtype_enumeration.cpp
    ../src/utils/storage/data_store_array.cpp
    ../src/utils/storage/data_container.cpp
    ../src/utils/storage/option_list.cpp
    ../src/utils/storage/I_addressable_container.cpp
    ../src/utils/storage/access_data_container.cpp
    ../src/utils/storage/addressable_container.cpp
    ../src/utils/storage/composite_reference_container.cpp
    ../src/utils/storage/lookup_table.cpp
    ../src/utils/storage/addressable_owning_container.cpp
    ../src/utils/storage/ext_map.cpp
    ../src/utils/storage/composite_container.cpp
    ../src/utils/storage/data_store_accessor.cpp
    ../src/gr_externs.cpp
    ../src/sysc_ext/kernel/gr_event.cpp
    ../src/sysc_ext/kernel/gr_notification_rules.cpp
    ../src/sysc_ext/kernel/gr_attribute.cpp
    ../src/sysc_ext/kernel/gr_sc_sensitive.cpp
    ../src/sysc_ext/kernel/gr_switch_container.cpp
    ../src/sysc_ext/kernel/gr_attribute_type_container.cpp
    ../src/sysc_ext/kernel/I_gr_component.cpp
    ../src/sysc_ext/kernel/gr_switch.cpp
    ../src/sysc_ext/kernel/gr_notification_rule_container.cpp
    ../src/sysc_ext/kernel/gr_component.cpp
    ../src/sysc_ext/kernel/gr_attribute_base.cpp
    ../src/sysc_ext/kernel/gr_component_container.cpp
    ../src/internal/device/device_container.cpp
    ../src/internal/device/I_device_container.cpp
    ../src/internal/device/I_device.cpp
    ../src/internal/device/subdevice_container.cpp
    ../src/internal/device/subdevice.cpp
    ../src/internal/device/device.cpp
    ../src/internal/registers/bit/bit_accessor.cpp
    ../src/internal/registers/bit/bit_data.cpp
    ../src/internal/registers/bit/splitio_bit.cpp
    ../src/internal/registers/bit/sharedio_bit.cpp
    ../src/internal/registers/register_data/primary_register_data.cpp
    ../src/internal/registers/register_data/standard_register_data.cpp
    ../src/internal/registers/register_compile_test.cpp
    ../src/internal/registers/bit_range/sharedio_bit_range.cpp
    ../src/internal/registers/bit_range/bit_range.cpp
    ../src/internal/registers/bit_range/bit_range_accessor.cpp
    ../src/internal/registers/bit_range/splitio_bit_range.cpp
    ../src/internal/registers/bit_range/bit_range_bit_accessor.cpp
    ../src/internal/registers/bit_range/bit_range_data.cpp
    ../src/internal/registers/register/register.cpp
    ../src/internal/registers/register/I_register.cpp
    ../src/internal/registers/register/register_container.cpp
    )

install(TARGETS greenreg DESTINATION lib)
