add_subdirectory(dbgr_test)
add_subdirectory(embedded-adder)
add_subdirectory(embedded-adder-fifo)
add_subdirectory(embedded-greenmessage)
add_subdirectory(embedded-multi-inst)
add_subdirectory(embedded-params)
add_subdirectory(embedded-testbench)
add_subdirectory(greenmessage)
add_subdirectory(greenmessage-configset)
add_subdirectory(writeif)
